crates/wac-parser/tests/resolution/fail/export-needs-with.wac
let i = new foo:bar {};
export i;
